--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
   <meta name="description" content="">
   <meta name="keywords" content="">
   <meta name="author" content="Tooplate">
