--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -67,6 +67,12 @@
   <script src="revolution/js/extensions/revolution.extension.parallax.min.js"></script>
   <script src="revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
   <script src="revolution/js/extensions/revolution.extension.video.min.js"></script>
+  <script type="text/javascript">
+    if (/MSIE \d|Trident.*rv:/.test(navigator.userAgent)) {
+      document.write('<script src="js/blazor.polyfill.min.js"><\/script>');
+    }
+  </script>
+  <script src="_framework/blazor.server.js"></script>
   <!-- map js -->
   <script>
     // This example adds a marker to indicate the position of Bondi Beach in Sydney,
